# aoc-2025

./: Cargo.toml  README.txt  build.rs  quickbench.sh
.cargo/: config.toml
benches/: bench.rs  day01.rs
inputs/: 12.txt
scripts/: build.sh  entrypoint.sh  input_path.sh
src/: day01.rs  day01_asm.s  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  file.rs  lib.rs  main.rs
